# safe-literals

./: .gitignore  CHANGELOG.md  README.md  build-and-test.py  checked-literals.cabal  deploy.py  flake.nix  format.sh  rationals.md  safe-literals.cabal
.github/workflows/: ci.yml
src/: CheckedLiterals.hs  SafeLiterals.hs
src-nums/CheckedLiterals/Nums/: Fixed.hs  Signed.hs  Unsigned.hs
src/CheckedLiterals/: Class.hs  Plugin.hs  Unchecked.hs
src/CheckedLiterals/Class/: Integer.hs  Rational.hs  TemplateHaskell.hs
src/CheckedLiterals/Class/Rational/: TypeNats.hs
src/SafeLiterals/: Class.hs  Plugin.hs  Unchecked.hs
src/SafeLiterals/Class/: Rational.hs
tests/: Main.hs  Tests.hs
tests/Test/Tasty/: AssertGhc.hs
tests/Tests/: Common.hs  Integer.hs  Rational.hs  Unsigned.hs  Word.hs
tests/Tests/Integer/: Case.hs  Fixed.hs  FunctionPattern.hs  Signed.hs  Unsigned.hs
tests/Tests/Rational/: Case.hs  Fixed.hs  FunctionPattern.hs  Ratio.hs
