cabal-version: 3.4
name: safe-literals
version: 0.1.0.0
license: BSD-2-Clause
license-file: LICENSE
author: Martijn Bastiaan
maintainer: martijn@hmbastiaan.nl
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

common typechecker-plugins
  build-depends:
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,

  ghc-options:
    -fplugin=GHC.TypeLits.KnownNat.Solver
    -fplugin=GHC.TypeLits.Normalise
    -fplugin=GHC.TypeLits.Extra.Solver

common sane-records
  default-extensions:
    DisambiguateRecordFields
    DuplicateRecordFields
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot

library
  import: warnings, sane-records
  exposed-modules:
    SafeLiterals
    SafeLiterals.Class
    SafeLiterals.Class.TemplateHaskell
    SafeLiterals.Plugin

  build-depends:
    base,
    ghc >=9.0,
    mtl,
    syb,
    template-haskell,

  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    TypeOperators

test-suite unittests
  import: warnings, typechecker-plugins, sane-records
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Test.Tasty.ShouldError
    Tests
    Tests.Unsigned
    Tests.Word

  default-extensions:
    DataKinds
    TypeOperators

  build-depends:
    base,
    directory,
    filepath,
    process,
    safe-literals,
    string-interpolate >=0.3.4.0,
    tasty >=0.10,
    tasty-hunit >=0.9,
    temporary,

  hs-source-dirs: tests
  default-language: GHC2021
  ghc-options:
    -fplugin=SafeLiterals
    -Wno-overflowed-literals
