cabal-version: 3.4
name: safe-literals
version: 0.1.0.0
license: BSD-2-Clause
license-file: LICENSE
author: Martijn Bastiaan
maintainer: martijn@hmbastiaan.nl
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

common typechecker-plugins
  build-depends:
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,

  ghc-options:
    -fplugin=GHC.TypeLits.KnownNat.Solver
    -fplugin=GHC.TypeLits.Normalise
    -fplugin=GHC.TypeLits.Extra.Solver

common sane-records
  default-extensions:
    DisambiguateRecordFields
    DuplicateRecordFields
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot

library
  import: warnings, typechecker-plugins, sane-records
  exposed-modules:
    SafeLiterals
    SafeLiterals.Class
    SafeLiterals.Class.Integer
    SafeLiterals.Class.Rational
    SafeLiterals.Class.Rational.TypeNats
    SafeLiterals.Class.TemplateHaskell
    SafeLiterals.Plugin
    SafeLiterals.Unchecked

  other-modules:
    Data.Ratio.Extra

  build-depends:
    base,
    ghc >=9.0,
    mtl,
    syb,
    template-haskell,

  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    NoStarIsType
    TypeOperators

-- XXX: These modules are just here to provide convincing tests for Clash-like types. They're
--      not tested well in any way, are incomplete in their implementation, and are certainly
--      not translatable to RTL.
library clash-nums
  import: warnings, typechecker-plugins, sane-records
  exposed-modules:
    SafeLiterals.Nums.Fixed
    SafeLiterals.Nums.Signed
    SafeLiterals.Nums.Unsigned

  build-depends:
    base,
    safe-literals,
    template-haskell,

  hs-source-dirs: src-nums
  default-language: GHC2021
  default-extensions:
    DataKinds
    NoStarIsType
    TypeOperators

test-suite unittests
  import: warnings, typechecker-plugins, sane-records
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Data.Ratio.Extra
    Test.Tasty.AssertGhc
    Tests.Common
    Tests.Integer
    Tests.Integer.Case
    Tests.Integer.Fixed
    Tests.Integer.FunctionPattern
    Tests.Integer.Int
    Tests.Integer.Signed
    Tests.Integer.Unsigned
    Tests.Integer.Word
    Tests.Rational
    Tests.Rational.Case
    Tests.Rational.Fixed
    Tests.Rational.FunctionPattern
    Tests.Rational.Ratio

  default-extensions:
    DataKinds
    NoStarIsType
    TypeOperators

  build-depends:
    base,
    directory,
    filepath,
    process,
    safe-literals,
    safe-literals:clash-nums,
    string-interpolate >=0.3.4.0,
    tasty >=0.10,
    tasty-hunit >=0.9,
    temporary,

  hs-source-dirs:
    tests
    src

  default-language: GHC2021
